[FEATURE] Agrego configuracion para tabla maximo ancho 801px

--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;1,300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cedarville+Cursive&display=swap" rel="stylesheet">
+
     <title>Encriptador - Alura</title>
 </head>
 <body>
+    <img src="imagenes/Logo.png" alt="Letra a de Alura" class="logo">
     <main>
-        <img src="imagenes/Logo.png" alt="Letra a de Alura" class="logo">
+
         <section class="entrada">
            <textarea type="text" id="texto" class="texto" placeholder="Ingrese el texto aquÍ"></textarea>
    
@@ -31,13 +34,16 @@
                 <img src="imagenes/uneco.jpg" alt="muneco" id ="muneco" class="muneco" >
                 <p class="texto1" id="texto1" >Ningún mensaje fue encontrado</p>
                 <p class="texto2" id="texto2" >Ingresa el texto que desees encriptar o desencriptar.</p>
-                <p class ="texto3" id="texto3" >Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, laboriosam, eaque iusto qui consequatur tempora dolorem repellendus saepe, quo omnis veniam cum id! Exercitationem placeat architecto nobis atque impedit dolores!</p>
+                <p class ="texto3" id="texto3" ></p>
                 <button id="btn-copiar" class="btn-copiar" type="submit" onclick="copiar();" >Copiar</button>
             </div>
       
         </section>
  
     </main>
+    <footer>
+        <p>Jose de Jesus Marquez Rangel</p>
+    </footer>
 </body>
     <script src="scripts/app.js"></script>
 </html>
